@@ -10,11 +10,13 @@ import com.kmu.anki.backend.domain.card.docs.KoreanCardDtoDocs;
 import com.kmu.anki.backend.domain.card.docs.parameters.CardParameters;
 import com.kmu.anki.backend.domain.card.dto.ForeignCardSearchResult;
 import com.kmu.anki.backend.domain.card.dto.KoreanCardDto;
+import com.kmu.anki.backend.domain.card.dto.KoreanCardWithForeignWord;
 import com.kmu.anki.backend.domain.card.entity.ForeignCard;
 import com.kmu.anki.backend.domain.card.entity.KoreanCard;
 import com.kmu.anki.backend.domain.card.entity.KoreanMeaning;
 import com.kmu.anki.backend.domain.card.enums.CardLevel;
 import com.kmu.anki.backend.domain.card.enums.CardTopicEnums;
+import com.kmu.anki.backend.domain.card.enums.LanguageCode;
 import com.kmu.anki.backend.domain.card.service.CardSearchService;
 import com.kmu.anki.backend.domain.user.service.UserOptionService;
 import com.kmu.anki.backend.global.AbstractControllerTest;
@@ -25,6 +27,7 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 
 import static org.mockito.BDDMockito.given;
@@ -40,12 +43,13 @@ class CardSearchControllerTest extends AbstractControllerTest {
 
     @Test
     void searchKoreanCard() throws Exception {
-        KoreanCardDto koreanCardDto = new KoreanCardDto(1L, "검색어", "1", CardLevel.easy, Set.of(CardTopicEnums.CULTURE));
-        Page<KoreanCardDto> result = new PageImpl<>(Collections.singletonList(koreanCardDto), PageRequest.of(0, 20), 1);
-        given(cardSearchService.searchKoreanCardByKoreanWord("검색어", 0, 20)).willReturn(result);
+        KoreanCardWithForeignWord koreanCardDto = new KoreanCardWithForeignWord(1L, "검색어", "1", CardLevel.easy, Set.of(CardTopicEnums.CULTURE), List.of("ENGLISH"));
+        Page<KoreanCardWithForeignWord> result = new PageImpl<>(Collections.singletonList(koreanCardDto), PageRequest.of(0, 20), 1);
+        given(cardSearchService.searchKoreanCardByKoreanWord("검색어", LanguageCode.en,0, 20)).willReturn(result);
 
         mockMvc.perform(get("/cards/korean-search")
                 .param("query", "검색어")
+                        .param("code", "en")
                         .param("page", "1")
                         .param("pageSize", "20")
         )
@@ -59,13 +63,14 @@ class CardSearchControllerTest extends AbstractControllerTest {
                                                 .summary("한국어 검색결과")
                                                 .queryParameters(
                                                         CardParameters.query,
+                                                        CardParameters.languageCode,
                                                         PageParameters.page,
                                                         PageParameters.pageSize
                                                 )
                                                 .responseFields(
-                                                        KoreanCardDtoDocs.koreanCardDtos
+                                                        KoreanCardDtoDocs.koreanCardWithForeignWordDtos
                                                 )
-                                                .responseSchema(KoreanCardDtoDocs.koreanCardSchemas)
+                                                .responseSchema(KoreanCardDtoDocs.koreanCardWithForeignWordSchemas)
                                                 .build()
                                 )
                         )
